--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -93,6 +93,10 @@ a{
     padding-left: 80px;
     display: inline-block;
 }
+
 #nav>ul>li>a{
     color: black;
+}#nav>ul>li>a:hover{
+    color: crimson;
+   	font-weight:bold;
 }
