--- a/src/main/webapp/resources/login/findForm.css
+++ b/src/main/webapp/resources/login/findForm.css
@@ -63,7 +63,7 @@
 }
 #find_id_top{
 	width:100%;
-	height:300px;	
+	height:auto;	
 }
 .find_a{
 	width:100%;
@@ -76,10 +76,56 @@
 }
 .find_b{
 	width:100%;
-	height:80px;
+	height:70px;
 	padding-left: 15px;
     box-sizing: border-box;
     font-size:20px;
+}
+
+.find_c{
+	width:100%;
+	height:70px;
+	text-align:center;
+    font-size:20px;
+    padding-top: 50px;
+    box-sizing: border-box;
+}
+
+.find_d{
+	width:100%;
+	height:70px;
+	text-align:center;
+    font-size:20px;
+    padding-top: 10px;
+    box-sizing: border-box;
+}
+
+.find_e{
+	width:100%;
+	height:70px;
+	padding-left: 15px;
+    box-sizing: border-box;
+    font-size:20px;
+}
+.find_f{
+width:100%;
+	height:70px;
+	text-align:center;
+    font-size:20px;
+}
+
+.find_e>p {
+	font-size: 17px;
+    text-align: center;
+    color: red;
+    font-weight: bold;
+}
+#userid{
+	   width: 70%;
+    height: 40px;
+    padding-left: 20px;
+    box-sizing: border-box;
+    margin-left: 17px;
 }
 #username{
 	width: 70%;
@@ -94,6 +140,21 @@
     padding-left: 20px;
     box-sizing: border-box;
     margin-left: 18px;
+}
+
+#userpw{
+	width: 55%;
+    height: 40px;
+    padding-left: 20px;
+    box-sizing: border-box;
+    margin-left: 58px;
+}
+#pwCk{
+	width: 55%;
+    height: 40px;
+    padding-left: 20px;
+    box-sizing: border-box;
+    margin-left: 45px;
 }
 
 
